feat: mejora menus y disponibilidad de colaciones
